--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -197,7 +197,7 @@ Relative humidity (RH) tends to be higher in the understory and decreases with h
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
 In combination with $T_{air}$ and $T_{leaf}$, RH determines leaf-to-air vapor pressure deficit (VPD) -- the driving force of water loss from leaves -- which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
 Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
-The implication is that upper canopy leaves face higher $g_b$ and associated potential for water and heat loss (see sections 2.2, 4.1).
+The implication is that upper canopy leaves have higher $g_b$ and associated potential for water and heat loss (see sections 2.2, 4.1).
 
 Vertical gradients in air temperature ($T_{air}$) across forest profiles are variable (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`), being dependent upon factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
 It is most commonly the case that attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019].
