leaf optical, just few more edits

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -314,17 +314,17 @@ In open canopies, where light is comparatively homogeneous, leaf traits may be m
 <!---need to cut parts of this paragraph or merge into 3.1?-->
 Leaf optical properties are influenced by a combination of anatomical, morphological, and biochemical traits that vary vertically, as outlined in sections 3.1 and 3.3.
 Along the vertical light gradient, leaf light absorptance is balanced with $T_{leaf}$ regulation, where excess light can impair photosynthetic machinery (see sections 3.4 and 3.5), and is only modestly greater in sun leaves or mid-canopy leaves than shade leaves (Table `r table_leaf_traits`). 
-In higher light environment, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or through biochemically dissipating heat through caretenoid concentrations [Table `r table_leaf_traits`, @leeCorrelatesLeafOptical1990; @knappVariabilityLeafOptical1998].
+In higher light environment, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or through biochemically dissipating heat by caretenoids [Table `r table_leaf_traits`, @leeCorrelatesLeafOptical1990; @knappVariabilityLeafOptical1998].
 Further, there is less need for light absorption efficiency, but greater need to channel the higher availability of light into deeper cell layers through "light pipes" or palisade layers that increase path length for light penetration, contributing to higher photosynthetic capacity.
-The thickness of sun leaves also reduces light transmittance or light scattered after entering the leaf more than in shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990].
-However, in the understory or shade regions where PAR is more limiting, leaf light absorption efficiency is greater, enhanced by shade leaves maintaining higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, higher nitrogen, and chlorophyll per unit biomass that exemplifies optical absorption capabilities, resulting in similar chlorophyll concentration per unit area as in sun leaves (Table `r table_leaf_traits`). 
-Therefore, shade leaves can have light harvesting capabilities comparable to those of sun leaves, with higher absorption efficiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. 
+The thickness of sun leaves also means that  light transmittance is lower than in shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990]. In contrast, where PAR is more limiting, leaf light absorption efficiency is greater, as shade leaves maintain higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, and higher concentrations of nitrogen, and chlorophyll (Table `r table_leaf_traits`). 
 Thus, while canopy leaves tend to invest more energy in metabolic activity and heat dissipation, understory leaves invest in light capture.
+Therefore, shade leaves can have light harvesting capabilities comparable to those of sun leaves, with higher absorption efficiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. 
+
 
 ## 3.3. Metabolic capacity and efficiency
 
 Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see section 4, Table `r table_leaf_metabolism`).
-Sun leaves have higher concentrations (per unit area) of elements such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) that are critical to leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes [@scartazzaInvestigatingEuropeanBeech2016a; @niinemetsPhotosyntheticAcclimationSimultaneous2004; @weerasingheCanopyPositionAffects2014].
+Sun leaves have higher concentrations (per unit area) of elements such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) that are critical to leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthesis [@scartazzaInvestigatingEuropeanBeech2016a; @niinemetsPhotosyntheticAcclimationSimultaneous2004; @weerasingheCanopyPositionAffects2014].
 Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the forest vertical profile contribute to the reater PAR absorptance efficiency of shade leaves (Table `r table_leaf_traits`).
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
 
