--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -391,9 +391,8 @@ Leaf phenology thereby both responds to and influences the vertical structure of
 ## 4. Leaf gas exchange and its thermal sensitivity
 
 Leaf metabolism is strongly shaped by $T_{leaf}$, and by the traits and environmental drivers reviewed above, all of which vary across vertical forest gradients (Fig. `r fig_schematic`). 
-However, as we detail below, few studies have evaluated temperature responses of leaf metabolic rates along a vertical forest gradient, or compared sun and shade leaves (Table `r table_leaf_metabolism`).
+However, as we detail below, few studies have evaluated temperature responses of leaf metabolic rates along a vertical forest gradient, or compared sun and shade leaves (Table `r table_leaf_metabolism`). \newpage
 
-\newpage
 **Table `r table_leaf_metabolism`.** Summary of observed variation in Leaf gas exchange and its thermal sensitivity across the vertical gradient and/or between sun and shade leaves. Studies listed here were compiled using a systematic review process, as described in Supplementary Information Methods `r appendix_lit_review_methods`.
 
 ![](table2a.png)
@@ -417,8 +416,8 @@ $\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = tem
 <!--refs in this table are in the nocite field at top of document-->
 $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Mier et al. 2001; 32. Turnbull et al. 2003; 33. Araki et al. 2017; 34. Bolstad et al. 1999; 35. Kenzo et al. 2015; 36. Harley et al. 1996; 37. Xu and Griffin 2006; 38. Atherton et al. 2017; 39. Carter et al. 2021; 40. Sack et al. 2003; 41. Slot et al. 2021; 42. Carswell et al. 2000
 
-** composite climatic stress variable integrating temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
-\newpage
+** composite climatic stress variable integrating temperature, vapour pressure deficit, and relative humidity is higher in lower canopy \newpage
+
 
 ### 4.1. Conductance
 
@@ -474,11 +473,11 @@ In open forests and for open-growth individual trees, growth rate declines with 
 This points to a dominant role of vertical profiles in the biophysical environment, particularly light (Fig. `r fig_NEON_vertical`), in shaping tree growth rates within forests. 
 
 Vertical gradients also affect the climate sensitivity of metabolism and growth.
-Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
-Therefore, periods of high atmospheric demand -- be these on time scales of hours, days, or seasons -- tend to cause greater reductions in tree transpiration and photosynthesis in tall trees that occupy canopy positions in closed-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
+Stomatal conductance can be strongly limited by high atmospheric demand (low RH, high $T_{air}$ and VPD) even when soil water is plentiful [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
+Therefore, periods of high atmospheric demand -- be these on time scales of hours, days, or seasons -- tend to cause greater reductions in transpiration and photosynthesis in tall trees that occupy canopy positions in closed-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
 This is consistent with the observation that $g_s$ limitation increases with height across the vertical profile (section 4.1, Table `r table_leaf_metabolism`). 
 More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce adjustment of traits related to carbon metabolism during drought [@bartholomewSmallTropicalForest2020]. 
-This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
+This results in decreasing carbon isotope discrimination, indicative of greater $g_s$ limitation, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
 In turn, the drought sensitivity of woody growth tends to be greater in canopy trees than in smaller trees with less exposed crowns. 
 In the field of dendrochronology, it is generally accepted that tree ring records of large, exposed trees are best suited for climate reconstructions because their annual growth displays the greatest sensitivity to interannual variation in climate [@frittsTreeRingsClimate1976]. 
