--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -364,13 +364,13 @@ At very high $T_{leaf}$ (~40-60$^{\circ}$C), photosystem II incurs irreversible 
 Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [e.g., @slotLeafHeatTolerance2021]. 
 Thermal tolerances vary across species, being more closely linked to leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]<!--; for example, among tropical species, $T_{crit}$ and $T_{50}$ were found to be high in species with large leaves with high thermal capacitance and those with high LMA, respectively [@slotLeafHeatTolerance2021]-->, and with higher thermal tolerance among leaves that experience higher maximum temperatures [@perezPhotosyntheticHeatTolerances2020].
 $T_{50}$ and $T_{crit}$ decrease across increasing latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
-However, they are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. 
+However, they appear to be are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. 
 <!--For example, *Quercus muehlenbergii* Engelm. growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than *Quercus macrocarpa* Michx. growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. (removed because I had trouble finding this in the paper, plus it's not really needed, but feel free to reinstate) -->
 
 <!--par on thermal tolerance across vertical gradients-->
 Based on their variation with the temperatures experienced by leaves, thermal tolerance metrics are hypothesized to be greatest for the leaves that face the greatest radiation and highest temperatures along the vertical gradient. 
 Indeed, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama, $T_{50}$ was 0.7 - 1.4$^\circ$C lower for shade than sun leaves for two of three tree species [Table `r table_leaf_traits`, @slotPhotosyntheticHeatTolerance2019]. 
-Similarly, along a vertical gradient within a very open canopy in Australia, where crowns of *Acacia papyrocarpa* Benth. faced the greatest composite climate stress (low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation) in the lower, north-facing portions of their crowns, $T_{50}$ was highest in these positions, *albiet* by <1$^\circ$C [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
+Similarly, along a vertical gradient within a very open canopy in Australia, where trees of *Acacia papyrocarpa* Benth. faced the greatest composite climate stress (low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation) in the lower, north-facing portions of their crowns, $T_{50}$ was highest in these positions, *albiet* by <1$^\circ$C [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
 These modest difference in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments imply that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
 However, not enough studies have evaluated thermal tolerances across vertical gradients to make robust inferences.
 
