adding missing citation

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9601,6 +9601,23 @@
   file = {/Users/nidhivinod/Zotero/storage/LAJILT3H/Osada et al. - 2001 - Leaf Dynamics and Maintenance of Tree Crowns in a .pdf}
 }
 
+@article{osnasDivergentDriversLeaf2018,
+  title = {Divergent Drivers of Leaf Trait Variation within Species, among Species, and among Functional Groups},
+  author = {Osnas, Jeanne L. D. and Katabuchi, Masatoshi and Kitajima, Kaoru and Wright, S. Joseph and Reich, Peter B. and Van Bael, Sunshine A. and Kraft, Nathan J. B. and Samaniego, Mirna J. and Pacala, Stephen W. and Lichstein, Jeremy W.},
+  date = {2018-05-22},
+  journaltitle = {Proc Natl Acad Sci USA},
+  volume = {115},
+  number = {21},
+  pages = {5480--5485},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1803989115},
+  url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1803989115},
+  urldate = {2020-07-17},
+  abstract = {Understanding variation in leaf functional traits—including rates of photosynthesis and respiration and concentrations of nitrogen and phosphorus—is a fundamental challenge in plant ecophysiology. When expressed per unit leaf area, these traits typically increase with leaf mass per area ( LMA ) within species but are roughly independent of LMA across the global flora. LMA is determined by mass components with different biological functions, including photosynthetic mass that largely determines metabolic rates and contains most nitrogen and phosphorus, and structural mass that affects toughness and leaf lifespan ( LL ). A possible explanation for the contrasting trait relationships is that most LMA variation within species is associated with variation in photosynthetic mass, whereas most LMA variation across the global flora is associated with variation in structural mass. This hypothesis leads to the predictions that ( i ) gas exchange rates and nutrient concentrations per unit leaf area should increase strongly with LMA across species assemblages with low LL variance but should increase weakly with LMA across species assemblages with high LL variance and that ( ii ) controlling for LL variation should increase the strength of the above LMA relationships. We present analyses of intra- and interspecific trait variation from three tropical forest sites and interspecific analyses within functional groups in a global dataset that are consistent with the above predictions. Our analysis suggests that the qualitatively different trait relationships exhibited by different leaf assemblages can be understood by considering the degree to which photosynthetic and structural mass components contribute to LMA variation in a given assemblage.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/J9DWC7AP/Osnas et al. 2018 Leaf Traits.pdf}
+}
+
 @article{osnasDivergentDriversLeaf2018a,
   title = {Divergent Drivers of Leaf Trait Variation within Species, among Species, and among Functional Groups},
   author = {Osnas, Jeanne L. D. and Katabuchi, Masatoshi and Kitajima, Kaoru and Wright, S. Joseph and Reich, Peter B. and Van Bael, Sunshine A. and Kraft, Nathan J. B. and Samaniego, Mirna J. and Pacala, Stephen W. and Lichstein, Jeremy W.},
