--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -264,12 +264,12 @@ This vertical variation in leaf structure and composition has been long recogniz
 Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade19688], and this tendency grew given the parallel differences observed for plants grown in sun versus shade conditions [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
 More recent work has included a focus not only on light, but also on leaf height in the canopy, as important in determining differences in mature leaf structure and function, as leaf traits may partially mitigate the effects of gravity and hydraulic pathlength that would affect leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
-Thus, leaves develop differently throughout the canopy according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of the ontogenetic stage of the branches [Table `r table_leaf_traits`; @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; **Niinemets et al., 2015a**].
+Thus, leaves develop differently throughout the canopy according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of the ontogenetic stage of the branches [Table `r table_leaf_traits`; @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015].
 Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
-Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (**cite Niinemets papers on this, as well as Japanese papers on N allocation throughout the canopy**). 
+Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height (@buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007). 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
 Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004, @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
-As canopy shade is known to alter these trait relationships (**Osnas et al. 2018 PNAS**), further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
+As canopy shade is known to alter these trait relationships (@osnasDivergentDriversLeaf2018), further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 
 Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [e.g., @example_within-individual_references], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a], and (3) across understory and canopy species [e.g., @example_interspecific_references]. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
